# example-mod

./: CMakeLists.txt  about.md  changelog.md  mod.json
.github/workflows/: build.yml
src/: main.cpp
